# hpc

./: .env  CMakeLists.txt  README  mpi.md  notes.md
include/: mpi_samples.h  omp_samples.h  samples.h
src/: barrier.c  bcast.c  bubble.c  collective.c  comms.c  hello.c  hello_cuda.cu  hello_omp.c  hist.c  integrate.c  integrate_nonblocking.c  matmul.c  max.c  merge.c  pack.c  pi.c  pi_monte_carlo.c  pi_monte_carlo_cuda.cu  prime_check.c  quicksort.c  ring.c  sum.c  unknown_size.c  vector.cu
